# CTRNGHunter

./: .gitignore  CMakeLists.txt  CTRNGHunter.slnx  CTRNGHunter.vcxproj  CTRNGHunter.vcxproj.filters  README.md  battle_sim.cpp  battle_sim.h  guardian_sim.cpp  guardian_sim.h  hunter_statistics.h  input.txt  main.cpp  msvc_rand_wrapper.cpp  msvc_rand_wrapper.h  rng_hunter.cpp  rng_hunter.h  rng_sim.cpp  rng_sim.h  rng_table.cpp  rng_table.h  rng_util.cpp  rng_util.h  seed_parser.cpp  seed_parser.h  seed_to_date.h  utils.cpp  utils.h
cmake/: generate_templates.cmake
inja/: inja.hpp
input/: blacktyranno.txt  dalton.txt  daltonplus.txt  dragontank.txt  dt.txt  flea.txt  ghosts.txt  gigagaia.txt  golemtwins.txt  guardian.txt  heckran.txt  import_test.txt  magus.txt  masamune.txt  melphyx.txt  motherbrain.txt  mud_imp.txt  mudimp.txt  nagas.txt  new_game.txt  new_game_agdq_2026.txt  nizbel.txt  nizbel2.txt  ozzie.txt  rseries.txt  rusttyranno.txt  slash.txt  sonofsun.txt  yakra.txt  yakraxiii.txt  zombor.txt
input/sections/: blackomen.txt  blacktyranno.txt  dalton.txt  daltonplus.txt  dragontank.txt  flea.txt  ghosts.txt  gigagaia.txt  gigamutant.txt  golemtwins.txt  guardian.txt  heckran.txt  magus.txt  masamune.txt  melphyx.txt  motherbrain.txt  mudimp.txt  nagas.txt  nizbel.txt  nizbel2.txt  ozzie.txt  rseries.txt  rusttyranno.txt  slash.txt  sonofsun.txt  start.txt  yakra.txt  yakraxiii.txt  zombor.txt
nlohmann/: json.hpp
tests/: hunter_statistics_test.cpp  msvc_rand_wrapper_test.cpp  rng_hunter_benchmark.cpp  rng_sim_test.cpp
walkthrough_gen/: templates.h.in  walkthrough_gen.cpp  walkthrough_gen.h
walkthrough_gen/templates/: blacktyranno_full.md  dalton_full.md  deathpeak_full.md  dragontank.md  dragontank_battle.md  dragontank_full.md  flea_battle.md  flea_full.md  full_walkthrough.md  ghosts_full.md  gigagaia_full.md  gigamutant_full.md  golemtwins_full.md  guardian_battle.md  guardian_full.md  heckran_full.md  lavoscore_full.md  lavosshell_full.md  lavosspawn_full.md  magus_battle.md  magus_full.md  masamune_battle.md  masamune_full.md  melphyx_full.md  motherbrain_full.md  mudimp_battle.md  mudimp_full.md  newgame_full.md  nizbel2_battle.md  nizbel2_full.md  nizbel_battle.md  nizbel_full.md  queenzeal_full.md  rseries_full.md  rusttyranno_full.md  simplified_walkthrough.md  slash_full.md  sonofsun_full.md  walkthrough.md  yakra.md  (+7 more)
